--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -90,69 +90,53 @@ jobs:
           echo "Verifying Code Signature"
           codesign --verify --verbose=4 "$APP_PATH"
 
-      # Package the .app into a .pkg
-      - name: Create .pkg with postinstall
+      - name: Install create-dmg
+        run: brew install create-dmg
+
+      - name: Create .dmg package
         run: |
-          mkdir -p package_root dist
+          mkdir -p dist dmg_contents
+          cp -R build/bin/scanoss-lui.app dmg_contents/
+          cp INSTALL_MACOS.md "dmg_contents/Installation Guide.md"
+          create-dmg \
+            --volname "SCANOSS LUI Installer" \
+            --window-size 600 400 \
+            --app-drop-link 450 200 \
+            --icon "scanoss-lui.app" 150 200 \
+            --icon "Installation Guide.md" 300 200 \
+            dist/scanoss-lui-macos.dmg \
+            dmg_contents/
 
-          cp -R build/bin/scanoss-lui.app package_root/
-
-          chmod +x scripts/postinstall
-
-          pkgbuild \
-            --root package_root \
-            --scripts scripts \
-            --identifier "com.scanoss.scanosslui" \
-            --install-location "/Applications" \
-            dist/scanoss-lui-macos.pkg
-
-      - name: Import Installer Certificate for macOS
-        uses: Apple-Actions/import-codesign-certs@v3
-        with:
-          keychain: signing_pkg
-          keychain-password: ${{ secrets.APPLE_PASSWORD }}
-          p12-file-base64: ${{ secrets.MACOS_INSTALLER_CERT }}
-          p12-password: ${{ secrets.MACOS_INSTALLER_CERT_PASSWORD }}
-
-      - name: Sign and Notarize Package
+      - name: Sign and Notarize DMG
         env:
           APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
           APPLE_ID: apple@scanoss.com
           APP_CERTIFICATE: ${{ secrets.MACOS_DEVELOPER_CERT_FULL_ID }}
           APPLE_DEVELOPER_ID: ${{ secrets.MACOS_DEVELOPER_CERT_ID }}
-          INSTALLER_CERTIFICATE: ${{ secrets.MACOS_INSTALLER_CERT_ID }}
         run: |
-          security default-keychain -s signing_pkg.keychain
-          PKG_PATH="dist/scanoss-lui-macos.pkg"
+          DMG_PATH="dist/scanoss-lui-macos.dmg"
 
-          echo "Available signing identities:"
-          security find-identity -v -p codesigning
+          echo "Signing .dmg with Certificate"
+          codesign --timestamp --deep --options runtime -s "$APP_CERTIFICATE" --force --verbose "$DMG_PATH"
 
-          echo "Available installer identities:"
-          /usr/bin/security find-identity -v -p basic
-
-          echo "Signing .pkg with Certificate"
-          productsign --sign "$INSTALLER_CERTIFICATE" "$PKG_PATH" "$PKG_PATH.signed"
-          mv "$PKG_PATH.signed" "$PKG_PATH"
-
-          echo "Submitting package for notarization"
-          xcrun notarytool submit "$PKG_PATH" \
+          echo "Submitting DMG for notarization"
+          xcrun notarytool submit "$DMG_PATH" \
             --apple-id "$APPLE_ID" \
             --password "$APPLE_PASSWORD" \
             --team-id "$APPLE_DEVELOPER_ID" \
             --wait
 
           echo "Stapling notarization ticket"
-          xcrun stapler staple "$PKG_PATH"
+          xcrun stapler staple "$DMG_PATH"
 
           echo "Verifying staple"
-          stapler validate "$PKG_PATH"
+          stapler validate "$DMG_PATH"
 
       - name: Upload build assets
         uses: actions/upload-artifact@v4
         with:
           name: artifact_m
-          path: dist/*.pkg
+          path: dist/*.dmg
 
   build_linux:
     name: Build for Linux
