feat: SP-1877 Add scanning capabilities from CLI and UI (#69)
* feat: SP-1877 Initialize scan command

* feat: SP-1877 Add scan service

* feat: SP-1877 Readd scan flags

* feat: SP-1877 Update mocks, add scan cmd test, add check dependencies before executing scan

* feat: SP-1877 Support scanning only files, add quiet flag by default, add more tests

* feat: SP-1877 Fix test

* feat: SP-1877 Update scanoss settings schema

* feat: SP-1877 Add scan menu options, add scan dialog component

* feat: SP-1877 Add service to stream a scan, add scan dialog with terminal-like output

* feat: SP-1877 Refetch results after successfull scan,

* feat: SP-1877 Fix unit tests

* Fix build and tests

* feat: SP-1877 Simplify workflow file

* feat: SP-1877 Fix workflow

* feat: SP-1877 Fixed auto scroll for terminal output component

* feat: SP-1877 Added proper app icon

* feat: SP-1877 Update app icon

* feat: SP-1877 Add .pkg for macos, update github action

feat: SP-1877 Fix macos build

feat: SP-1877 Temporally comment out the macos sign process

feat: SP-1877 update build workflow

feat: SP-1877 Fix build

feat: SP-1877 Fix build

feat: SP-1877 Fix build

feat: SP-1877 fix build

feat: SP-1877 readd macos signing

feat: SP-1877 fix build

feat: SP-1877 fix build

feat: SP-1877 fix build

* feat: SP-1877 Use macos_installer_cert_id for signin .pkg

feat: SP-1877 Update workflow

feat: SP-1877 Update workflow

feat: SP-1877 Update workflow

feat: SP-1877 Update workflow

feat: SP-1877 Update workflow

feat: SP-1877 Update workflow

feat: SP-1877 Update workflow

feat: SP-1877 Fix makefile

* feat: SP-1877 Add notarization

* feat: SP-1877 Use .dmg for distribution instead of .pkg

* feat: SP-1877 Update install docs, fetch default folder in scan with options

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,70 +45,98 @@ jobs:
         run: go install github.com/wailsapp/wails/v2/cmd/wails@latest
         shell: bash
 
-      #TODO: Check if is used
-      - name: Install macOS Wails deps
-        run: brew install mitchellh/gon/gon
-        shell: bash
-
       # Build
       - name: Build App
         run: |
           mkdir build
           cp -r assets build/assets
-          wails build -ldflags "-X github.com/scanoss/scanoss.lui/backend/entities.AppVersion=$(git tag --sort=-version:refname | head -n 1)" --platform "darwin/universal" --nopackage -webview2 download -o scanoss-lui-macos
+          cp assets/appicon.png build
+          wails build -ldflags "-X github.com/scanoss/scanoss.lui/backend/entities.AppVersion=$(git tag --sort=-version:refname | head -n 1)" --platform "darwin/universal"
         shell: bash
 
-      # Set execution permissions
-      - name: Add macOS perms
-        run: chmod +x ./build/bin/scanoss-lui-macos
-        shell: bash
+      # Make sure the .app exists
+      - name: Check .app
+        run: ls -l build/bin/*.app || (echo ".app not found!" && exit 1)
 
-      # macOS Signing
       - name: Import Code-Signing Certificates for macOS
-        if: startsWith(github.ref, 'refs/tags/')
         uses: Apple-Actions/import-codesign-certs@v3
         with:
+          keychain: signing_app
           keychain-password: ${{ secrets.APPLE_PASSWORD }}
           p12-file-base64: ${{ secrets.MACOS_DEVELOPER_CERT }}
           p12-password: ${{ secrets.MACOS_DEVELOPER_CERT_PASSWORD }}
 
-      - name: Sign and Notarize
+      - name: Sign .app Bundle
         env:
           APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
           APPLE_ID: apple@scanoss.com
           APP_CERTIFICATE: ${{ secrets.MACOS_DEVELOPER_CERT_FULL_ID }}
           APPLE_DEVELOPER_ID: ${{ secrets.MACOS_DEVELOPER_CERT_ID }}
         run: |
-          echo "Signing Package with App Certificate"
-          codesign --timestamp --deep --options runtime -s "$APP_CERTIFICATE"  --verbose ./build/bin/scanoss-lui-macos
+          security default-keychain -s signing_app.keychain
+          APP_PATH="build/bin/scanoss-lui.app"
+
+          codesign --remove-signature "$APP_PATH"
+          codesign --remove-signature "$APP_PATH/Contents/MacOS/scanoss-lui"
+
+          echo "Signing .app with App Certificate: $APP_CERTIFICATE"
+
+          # Sign the main executable
+          codesign --timestamp --options runtime -s "$APP_CERTIFICATE" --verbose "$APP_PATH/Contents/MacOS/scanoss-lui"
+
+          # Sign the .app bundle
+          codesign --timestamp --deep --options runtime -s "$APP_CERTIFICATE" --force --verbose "$APP_PATH"
 
           echo "Verifying Code Signature"
-          codesign --verify --verbose=4 ./build/bin/scanoss-lui-macos
+          codesign --verify --verbose=4 "$APP_PATH"
 
-          echo "Detailed Signature Information"
-          codesign -dvv ./build/bin/scanoss-lui-macos
+      - name: Install create-dmg
+        run: brew install create-dmg
 
-          echo "Checking Gatekeeper Acceptance (Before Notarization)"
-          spctl -a -vv ./build/bin/scanoss-lui-macos || echo "Gatekeeper rejection expected before notarization"
+      - name: Create .dmg package
+        run: |
+          mkdir -p dist dmg_contents
+          cp -R build/bin/scanoss-lui.app dmg_contents/
+          cp INSTALL_MACOS.md "dmg_contents/Installation Guide.md"
+          create-dmg \
+            --volname "SCANOSS LUI Installer" \
+            --window-size 600 400 \
+            --app-drop-link 450 200 \
+            --icon "scanoss-lui.app" 150 200 \
+            --icon "Installation Guide.md" 300 200 \
+            dist/scanoss-lui-macos.dmg \
+            dmg_contents/
 
-          echo "Creating zip archive"
-          ditto -c -k --sequesterRsrc --keepParent ./build/bin/scanoss-lui-macos ./build/bin/scanoss-lui-macos.zip
+      - name: Sign and Notarize DMG
+        env:
+          APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
+          APPLE_ID: apple@scanoss.com
+          APP_CERTIFICATE: ${{ secrets.MACOS_DEVELOPER_CERT_FULL_ID }}
+          APPLE_DEVELOPER_ID: ${{ secrets.MACOS_DEVELOPER_CERT_ID }}
+        run: |
+          DMG_PATH="dist/scanoss-lui-macos.dmg"
 
-          echo "Submitting for Notarization"
-          xcrun notarytool submit ./build/bin/scanoss-lui-macos.zip --apple-id "$APPLE_ID" --team-id "$APPLE_DEVELOPER_ID" --password "$APPLE_PASSWORD" --wait
+          echo "Signing .dmg with Certificate"
+          codesign --timestamp --deep --options runtime -s "$APP_CERTIFICATE" --force --verbose "$DMG_PATH"
 
-          echo "Checking Notarization Status"
-          xcrun notarytool history --apple-id "$APPLE_ID" --team-id "$APPLE_DEVELOPER_ID" --password "$APPLE_PASSWORD"
+          echo "Submitting DMG for notarization"
+          xcrun notarytool submit "$DMG_PATH" \
+            --apple-id "$APPLE_ID" \
+            --password "$APPLE_PASSWORD" \
+            --team-id "$APPLE_DEVELOPER_ID" \
+            --wait
 
-          chmod +x ./build/bin/scanoss-lui-macos
+          echo "Stapling notarization ticket"
+          xcrun stapler staple "$DMG_PATH"
 
-          echo "Signing and Notarization Complete"
+          echo "Verifying staple"
+          stapler validate "$DMG_PATH"
 
       - name: Upload build assets
         uses: actions/upload-artifact@v4
         with:
           name: artifact_m
-          path: ./build/bin/*.zip
+          path: dist/*.dmg
 
   build_linux:
     name: Build for Linux
@@ -149,6 +177,7 @@ jobs:
         run: |
           mkdir build
           cp -r assets build/assets
+          cp assets/appicon.png build
           wails build -ldflags "-X github.com/scanoss/scanoss.lui/backend/entities.AppVersion=$(git tag --sort=-version:refname | head -n 1)" --platform "linux/amd64" -webview2 download -o scanoss-lui-linux
         shell: bash
 
@@ -202,6 +231,7 @@ jobs:
         run: |
           mkdir build
           cp -r assets build/assets
+          cp assets/appicon.png build
           wails build -ldflags "-X github.com/scanoss/scanoss.lui/backend/entities.AppVersion=$(git tag --sort=-version:refname | head -n 1)" --platform "windows/amd64" -webview2 download -o ${{env.ARTIFACT_NAME_PREFIX}}-windows.exe
         shell: bash
 
