--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ on:
 env:
   # Necessary for most environments as build failure can occur due to OOM issues
   NODE_OPTIONS: "--max-old-space-size=4096"
-  ARTIFACT_NAME_PREFIX: "ScanossCodeCompare"
+  ARTIFACT_NAME_PREFIX: "SCANOSS Code Compare"
   GOLANG_VERSION: "1.21"
   NODE_VERSION: "16.x"
 
@@ -48,15 +48,15 @@ jobs:
       # Build
       - name: Build App
         run: |
-          mkdir build
+          mkdir -p build
           cp -r assets build/assets
           cp assets/appicon.png build
-          wails build -ldflags "-X github.com/scanoss/scanoss.cc/backend/entities.AppVersion=$(git tag --sort=-version:refname | head -n 1)" --platform "darwin/universal"
+          wails build -ldflags "-X github.com/scanoss/scanoss.cc/backend/entities.AppVersion=$(git tag --sort=-version:refname | head -n 1)" --platform "darwin/universal" -o "${{ env.ARTIFACT_NAME_PREFIX }}"
         shell: bash
 
       # Make sure the .app exists
       - name: Check .app
-        run: ls -l build/bin/*.app || (echo ".app not found!" && exit 1)
+        run: ls -l "build/bin/${{ env.ARTIFACT_NAME_PREFIX }}.app" || (echo ".app not found!" && exit 1)
 
       - name: Import Code-Signing Certificates for macOS
         uses: Apple-Actions/import-codesign-certs@v3
@@ -77,12 +77,12 @@ jobs:
           APP_PATH="build/bin/${{ env.ARTIFACT_NAME_PREFIX }}.app"
 
           codesign --remove-signature "$APP_PATH"
-          codesign --remove-signature "$APP_PATH/Contents/MacOS/${{env.ARTIFACT_NAME_PREFIX}}"
+          codesign --remove-signature "$APP_PATH/Contents/MacOS/${{ env.ARTIFACT_NAME_PREFIX }}"
 
           echo "Signing .app with App Certificate: $APP_CERTIFICATE"
 
           # Sign the main executable
-          codesign --timestamp --options runtime -s "$APP_CERTIFICATE" --verbose "$APP_PATH/Contents/MacOS/${{env.ARTIFACT_NAME_PREFIX}}"
+          codesign --timestamp --options runtime -s "$APP_CERTIFICATE" --verbose "$APP_PATH/Contents/MacOS/${{ env.ARTIFACT_NAME_PREFIX }}"
 
           # Sign the .app bundle
           codesign --timestamp --deep --options runtime -s "$APP_CERTIFICATE" --force --verbose "$APP_PATH"
@@ -96,16 +96,17 @@ jobs:
       - name: Create .dmg package
         run: |
           mkdir -p dist dmg_contents
-          cp -R build/bin/${{env.ARTIFACT_NAME_PREFIX}}.app dmg_contents/
+          cp -R "build/bin/${{ env.ARTIFACT_NAME_PREFIX }}.app" dmg_contents/
           cp INSTALL_MACOS.md "dmg_contents/Installation Guide.md"
           create-dmg \
-            --volname "SCANOSS Code Compare Installer" \
+            --volname "${{ env.ARTIFACT_NAME_PREFIX }} Installer" \
             --window-size 600 400 \
             --app-drop-link 450 200 \
-            --icon "${{env.ARTIFACT_NAME_PREFIX}}.app" 150 200 \
+            --icon "${{ env.ARTIFACT_NAME_PREFIX }}.app" 150 200 \
             --icon "Installation Guide.md" 300 200 \
-            dist/${{env.ARTIFACT_NAME_PREFIX}}-macos.dmg \
+            "dist/${{ env.ARTIFACT_NAME_PREFIX }}-$(git tag --sort=-version:refname | head -n 1).dmg" \
             dmg_contents/
+          rm -rf dmg_contents
 
       - name: Sign and Notarize DMG
         env:
@@ -114,7 +115,7 @@ jobs:
           APP_CERTIFICATE: ${{ secrets.MACOS_DEVELOPER_CERT_FULL_ID }}
           APPLE_DEVELOPER_ID: ${{ secrets.MACOS_DEVELOPER_CERT_ID }}
         run: |
-          DMG_PATH="dist/${{env.ARTIFACT_NAME_PREFIX}}-macos.dmg"
+          DMG_PATH="dist/${{ env.ARTIFACT_NAME_PREFIX }}-$(git tag --sort=-version:refname | head -n 1).dmg"
 
           echo "Signing .dmg with Certificate"
           codesign --timestamp --deep --options runtime -s "$APP_CERTIFICATE" --force --verbose "$DMG_PATH"
