--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -179,20 +179,29 @@ jobs:
         shell: bash
 
       # Build
-      - name: Build Linux App
+      - name: Build App
         run: |
-          mkdir build
+          mkdir -p build/bin
           cp -r assets build/assets
           cp assets/appicon.png build
-          wails build -ldflags "-X github.com/scanoss/scanoss.cc/backend/entities.AppVersion=$(git tag --sort=-version:refname | head -n 1)" --platform "linux/amd64" -webview2 download -o ${{env.ARTIFACT_NAME_PREFIX}}-linux
+          wails build -ldflags "-X github.com/scanoss/scanoss.cc/backend/entities.AppVersion=$(git tag --sort=-version:refname | head -n 1)" --platform linux/amd64 -o "${{ env.ARTIFACT_NAME_PREFIX }}-linux"
         shell: bash
 
-      - name: Add Linux perms
-        run: chmod +x ./build/bin/${{env.ARTIFACT_NAME_PREFIX}}-linux
+      - name: Make binary executable
+        run: chmod +x "./build/bin/${{ env.ARTIFACT_NAME_PREFIX }}-linux"
         shell: bash
+
+      - name: Create AppImage
+        run: |
+          mkdir -p AppDir/usr/bin
+          cp "./build/bin/${{ env.ARTIFACT_NAME_PREFIX }}-linux" "AppDir/usr/bin/${{ env.ARTIFACT_NAME_PREFIX }}"
+          cp build/appicon.png AppDir/
+          cp -r build/assets AppDir/
 
       - name: Create ZIP file
-        run: cd ./build/bin && zip -r artifact_l.zip ${{env.ARTIFACT_NAME_PREFIX}}-linux
+        run: |
+          cd ./build/bin
+          zip -r artifact_l.zip "${{ env.ARTIFACT_NAME_PREFIX }}-linux"
         shell: bash
 
       - name: Upload build assets
@@ -204,6 +213,7 @@ jobs:
   build_w:
     name: Build for Windows
     runs-on: windows-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -231,12 +241,12 @@ jobs:
         shell: bash
 
       # Build
-      - name: Build Windows App
+      - name: Build App
         run: |
-          mkdir build
+          mkdir -p build/bin
           cp -r assets build/assets
           cp assets/appicon.png build
-          wails build -ldflags "-X github.com/scanoss/scanoss.cc/backend/entities.AppVersion=$(git tag --sort=-version:refname | head -n 1)" --platform "windows/amd64" -webview2 download -o ${{env.ARTIFACT_NAME_PREFIX}}-windows.exe
+          wails build -ldflags "-X github.com/scanoss/scanoss.cc/backend/entities.AppVersion=$(git tag --sort=-version:refname | head -n 1)" --platform "windows/amd64" -webview2 download -o "${{ env.ARTIFACT_NAME_PREFIX }}-windows.exe"
         shell: bash
 
       - uses: actions/upload-artifact@v4
@@ -260,10 +270,12 @@ jobs:
       - name: Find Windows Artifact Path
         id: win-path-artifact
         run: |
-          export WIN_BINARY_FILEPATH=$(ls ${{ env.ARTIFACT_NAME_PREFIX }}*.exe)
-          mkdir win_unsigned
+          # Use find to locate the exe file
+          WIN_BINARY_FILEPATH=$(find . -name "${{ env.ARTIFACT_NAME_PREFIX }}-windows.exe")
+          mkdir -p win_unsigned
           mv "$WIN_BINARY_FILEPATH" win_unsigned/
-          echo "ARTIFACT_WIN_PATH=win_unsigned/$WIN_BINARY_FILEPATH" >> "$GITHUB_OUTPUT"
+          echo "ARTIFACT_WIN_PATH=win_unsigned/$(basename "$WIN_BINARY_FILEPATH")" >> "$GITHUB_OUTPUT"
+        shell: bash
 
       - name: Sign Windows Artifact with CodeSignTool
         uses: sslcom/esigner-codesign@develop
@@ -282,8 +294,9 @@ jobs:
         shell: bash
         run: |
           mkdir -p build/bin
-          export WIN_BINARY_FILEPATH=$(ls ${{ env.ARTIFACT_NAME_PREFIX }}*.exe)
-          zip ./build/bin/${{env.ARTIFACT_NAME_PREFIX}}-win.zip $WIN_BINARY_FILEPATH
+          cd win_unsigned
+          # Create zip from the current directory
+          zip -j "../build/bin/${{ env.ARTIFACT_NAME_PREFIX }}-win.zip" "${{ env.ARTIFACT_NAME_PREFIX }}-windows.exe"
 
       - uses: actions/upload-artifact@v4
         with:
@@ -311,14 +324,21 @@ jobs:
         with:
           name: artifact_l
 
-      - name: Publish release draft
+      - name: Create Release
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GH_PROMPT_DISABLED: "disable"
         run: |
-          gh release create ${{github.ref_name}} \
-                            --repo ${{ github.server_url }}/${{ github.repository }} \
-                            --generate-notes \
-                            --draft \
-                            $(ls *.zip)
+          # Create an array of zip files
+          zip_files=()
+          while IFS= read -r -d '' file; do
+            zip_files+=("$file")
+          done < <(find . -name "*.zip" -print0)
+
+          # Create the release with all zip files
+          gh release create "${{ github.ref_name }}" \
+            --repo "${{ github.repository }}" \
+            --generate-notes \
+            --draft \
+            "${zip_files[@]}"
+        shell: bash
 
