--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,10 @@
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.1.0",
+    "@radix-ui/react-context-menu": "^2.2.6",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
-    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.1.0",
@@ -36,7 +37,9 @@
     "framer-motion": "^12.0.6",
     "lucide-react": "^0.424.0",
     "monaco-editor": "^0.50.0",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
+    "react-arborist": "^3.4.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.0",
     "react-hotkeys-hook": "^4.5.1",
@@ -44,6 +47,7 @@
     "react-router-dom": "^6.26.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "use-resize-observer": "^9.1.0",
     "uuid": "^10.0.0",
     "zod": "^3.23.8",
     "zustand": "^4.3.2"
@@ -52,6 +56,7 @@
     "@eslint/js": "^9.8.0",
     "@tanstack/eslint-plugin-query": "^5.51.15",
     "@types/node": "^22.1.0",
+    "@types/path-browserify": "^1.0.3",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/uuid": "^10.0.0",
