[SP-2882] feat: add online component search (#112)
* [SP-2882] feat: add online component search

* [SP-2882] feat: ui enhancements, add package selector

* [SP-2882] chore: use debug logs for service calls, remove comments

* [SP-2882] fix: unreachable code, remove hardcoded status response

* [SP-2882] chore: small enhancements

* [SP-2882] fix: handle errors while initializing grpc client

* [SP-2882] fix: test workflow

* [SP-2882] fix: handle missing api key for grpc client

* [SP-2882] fix: popover component

* [SP-2882] feat: add keyboard shortcut for search component online

* [SP-2882] fix: use different keyboard shortcut for online search

* [SP-2882] feat: remove grpc, use scanoss rest api

* [SP-2882] feat: use new http client, prepare for GET requests with query params

* [SP-2882] feat: show matched licenses for selected component when searching online

* [SP-2882] feat: add keyboard navigation for table component

* [SP-2882] chore: enhancements

* [SP-2882] chore: enhancements

* [SP-2882] chore: pr comments, update scanoss.json

* [SP-2882] chore: update changelog

* updated findings

* use api key secret

---------

Co-authored-by: eeisegn <eeisegn@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  GOLANG_VERSION: "1.21"
+  GOLANG_VERSION: "1.23"
   NODE_VERSION: "16.x"
 
 jobs:
@@ -37,7 +37,7 @@ jobs:
         run: |
           mkdir build
           cp -r assets build/assets
-          wails build
+          wails build APPARGS="--key test"
         shell: bash
 
       - name: Upload build artifacts
@@ -97,5 +97,6 @@ jobs:
 
       - name: Run integration tests
         env:
-          SCANOSS_API_KEY: ${{ secrets.SCANOSS_API_KEY }}
+          SCANOSS_API_KEY: ${{ secrets.SC_API_KEY }}
         run: go test -v ./... -tags=integration
+
