[SP-3605] feat: enhance installation scripts
* [SP-3447] fix: remove test and tests from default skipped dirs

* [SP-3447] chore: update changelog
[SP-3605] feat: enhanced installation scripts for all platforms, add update notification component

[SP-3605] chore: update scanoss.json

[SP-3605] feat: add gh release checksum verification, add semver validation

[SP-3605] fix: windows installer config

[SP-3605] fix: release workflow

[SP-3605] fix: release workflow

[SP-3605] fix: release workflow

[SP-3605] fix: windows release workflow

[SP-3605] fix: simplify windows distribution

[SP-3605] feat: standardize binary names and add installation scripts

[SP-3605] fix: update installation scripts

[SP-3605] fix: unit tests

[SP-3605] fix: macos install permission errors

[SP-3605] chore: update changelog

[SP-3605] fix: windows install script

[SP-3605] fix: windows install script

[SP-3605] fix: windows install script

fix: remove all Unicode characters from PowerShell script for compatibility

[SP-3605] chore: update changelog

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,8 +10,7 @@ on:
 env:
   # Necessary for most environments as build failure can occur due to OOM issues
   NODE_OPTIONS: "--max-old-space-size=4096"
-  ARTIFACT_NAME_PREFIX: "SCANOSS Code Compare"
-  ARTIFACT_NAME_PREFIX_WINDOWS: "scanoss-cc"
+  ARTIFACT_NAME_PREFIX: "scanoss-cc"
   GOLANG_VERSION: "1.23"
   NODE_VERSION: "20.x"
 
@@ -49,9 +48,7 @@ jobs:
       # Build
       - name: Build App
         run: |
-          mkdir -p build
-          cp -r assets build/assets
-          cp assets/appicon.png build
+          make cp_assets
           wails build -ldflags "-X github.com/scanoss/scanoss.cc/backend/entities.AppVersion=$(git tag --sort=-version:refname | head -n 1)" --platform "darwin/universal" -o "${{ env.ARTIFACT_NAME_PREFIX }}"
         shell: bash
 
@@ -98,13 +95,8 @@ jobs:
         run: |
           mkdir -p dist dmg_contents
           cp -R "build/bin/${{ env.ARTIFACT_NAME_PREFIX }}.app" dmg_contents/
-          cp INSTALL_MACOS.md "dmg_contents/Installation Guide.md"
           create-dmg \
             --volname "${{ env.ARTIFACT_NAME_PREFIX }} Installer" \
-            --window-size 600 400 \
-            --app-drop-link 450 200 \
-            --icon "${{ env.ARTIFACT_NAME_PREFIX }}.app" 150 200 \
-            --icon "Installation Guide.md" 300 200 \
             "dist/${{ env.ARTIFACT_NAME_PREFIX }}-$(git tag --sort=-version:refname | head -n 1).dmg" \
             dmg_contents/
           rm -rf dmg_contents
@@ -217,22 +209,13 @@ jobs:
       # Build
       - name: Build App
         run: |
-          mkdir -p build/bin
-          cp -r assets build/assets
-          cp assets/appicon.png build
+          make cp_assets
           wails build -ldflags "-X github.com/scanoss/scanoss.cc/backend/entities.AppVersion=$(git tag --sort=-version:refname | head -n 1)" --platform linux/amd64 -o "${{ env.ARTIFACT_NAME_PREFIX }}-linux"
         shell: bash
 
       - name: Make binary executable
         run: chmod +x "./build/bin/${{ env.ARTIFACT_NAME_PREFIX }}-linux"
         shell: bash
-
-      - name: Create AppImage
-        run: |
-          mkdir -p AppDir/usr/bin
-          cp "./build/bin/${{ env.ARTIFACT_NAME_PREFIX }}-linux" "AppDir/usr/bin/${{ env.ARTIFACT_NAME_PREFIX }}"
-          cp build/appicon.png AppDir/
-          cp -r build/assets AppDir/
 
       - name: Create ZIP file
         run: |
@@ -279,17 +262,14 @@ jobs:
       # Build
       - name: Build App
         run: |
-          mkdir -p build/bin
-          cp -r assets build/assets
-          cp assets/appicon.png build
-          wails build -ldflags "-X github.com/scanoss/scanoss.cc/backend/entities.AppVersion=$(git tag --sort=-version:refname | head -n 1)" --platform "windows/amd64" -webview2 download -o "${{ env.ARTIFACT_NAME_PREFIX_WINDOWS }}-windows.exe" -windowsconsole
+          make cp_assets
+          wails build -ldflags "-X github.com/scanoss/scanoss.cc/backend/entities.AppVersion=$(git tag --sort=-version:refname | head -n 1)" --platform "windows/amd64" -webview2 download -o "${{ env.ARTIFACT_NAME_PREFIX }}.exe" -windowsconsole
         shell: bash
 
       - uses: actions/upload-artifact@v4
         with:
           name: artifact_w_unsigned
-          path: |
-            build/bin/${{ env.ARTIFACT_NAME_PREFIX_WINDOWS }}*.exe
+          path: build/bin/${{ env.ARTIFACT_NAME_PREFIX }}.exe
 
   build_w_sign:
     name: "Sign with CodeSignTool"
@@ -307,13 +287,13 @@ jobs:
         id: win-path-artifact
         run: |
           # Use find to locate the exe file
-          WIN_BINARY_FILEPATH=$(find . -name "${{ env.ARTIFACT_NAME_PREFIX_WINDOWS }}-windows.exe")
+          WIN_BINARY_FILEPATH=$(find . -name "${{ env.ARTIFACT_NAME_PREFIX }}.exe")
           mkdir -p win_unsigned
           mv "$WIN_BINARY_FILEPATH" win_unsigned/
           echo "ARTIFACT_WIN_PATH=win_unsigned/$(basename "$WIN_BINARY_FILEPATH")" >> "$GITHUB_OUTPUT"
         shell: bash
 
-      - name: Sign Windows Artifact with CodeSignTool
+      - name: Sign Windows Executable with CodeSignTool
         uses: sslcom/esigner-codesign@develop
         env:
           ARTIFACT_WIN_PATH: ${{ steps.win-path-artifact.outputs.ARTIFACT_WIN_PATH }}
@@ -326,13 +306,13 @@ jobs:
           file_path: ${GITHUB_WORKSPACE}/${{ env.ARTIFACT_WIN_PATH }}
           output_path: ${GITHUB_WORKSPACE}
 
-      - name: zip file
+      - name: zip files
         shell: bash
         run: |
           mkdir -p build/bin
           cd win_unsigned
-          # Create zip from the current directory
-          zip -j "../build/bin/${{ env.ARTIFACT_NAME_PREFIX_WINDOWS }}-win.zip" "${{ env.ARTIFACT_NAME_PREFIX_WINDOWS }}-windows.exe"
+          # Create zip with signed exe
+          zip -j "../build/bin/${{ env.ARTIFACT_NAME_PREFIX }}-win.zip" "${{ env.ARTIFACT_NAME_PREFIX }}.exe"
 
       - uses: actions/upload-artifact@v4
         with:
@@ -360,21 +340,31 @@ jobs:
         with:
           name: artifact_l
 
+      - name: Generate SHA256 Checksums
+        run: |
+          echo "Generating SHA256 checksums for all release files..."
+          find . -name "*.zip" -type f -exec sha256sum {} \; > SHA256SUMS
+          echo "SHA256SUMS file contents:"
+          cat SHA256SUMS
+        shell: bash
+
       - name: Create Release
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          # Create an array of zip files
-          zip_files=()
+          # Create an array of release files
+          release_files=()
           while IFS= read -r -d '' file; do
-            zip_files+=("$file")
+            release_files+=("$file")
           done < <(find . -name "*.zip" -print0)
 
-          # Create the release with all zip files
+          # Add SHA256SUMS file to release
+          release_files+=("SHA256SUMS")
+
+          # Create the release with all files
           gh release create "${{ github.ref_name }}" \
             --repo "${{ github.repository }}" \
             --generate-notes \
             --draft \
-            "${zip_files[@]}"
+            "${release_files[@]}"
         shell: bash
-
